# application-examples

./: .gitignore  .gitmodules  README.md  checkerer.rb
.github/workflows/: check.yaml  express-docker-push-aws.yaml  express-docker-push-azure.yaml  express-docker-push-gcp.yaml
aws/api-gateway-lambda/: README.md  massdriver.yaml
aws/lambda-transform/: massdriver.yaml
aws/step-functions/: Makefile  docker-compose.yaml  massdriver.yaml
azure/app-service/: README.md  massdriver.yaml
azure/azure-app-phoenix-chat/: massdriver.yaml
express/: Dockerfile  app.js  docker-compose.yaml
express/massdriver-app/: massdriver.yaml
express/routes/: index.js  posts.js  users.js
express/views/: index.jade  layout.jade
gcp-cloud-run-rails-postgesql/: .gitignore  Dockerfile  Dockerfile.dev  Gemfile  Makefile  docker-compose.yaml
gcp-cloud-run-rails-postgesql/config/: application.rb  cable.yml  credentials.yml.enc  database.yml
gcp-cloud-run-rails-postgesql/db/: schema.rb
gcp-cloud-run-rails-postgesql/massdriver-app/: massdriver.yaml
gcp/cloud-run-postgresql/: massdriver.yaml
k8s-express-mongo/: .dockerignore  .gitignore  Makefile  app.js  package.json
k8s-express-mongo/massdriver-app/: app.yaml  massdriver.yaml
k8s/demo-chat/: massdriver.yaml
k8s/express-mongo-guestbook/: Makefile
k8s/warp-api/app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  docker-compose.yaml
k8s/warp-api/app/src/: main.rs
k8s_elixir_postgres/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  mix.exs
(+289 files in other folders)
