[package]
name = "warp_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "app"
path = "src/main.rs"
